# OJ

./: README.en.md  README.md
MYOJ/: CMakeLists.txt
MYOJ/OJ_server/: OJ_Control.hpp  OJ_model_MySQL.hpp  OJ_server  OJ_server.cc  OJ_server.cpp  OJ_view.hpp  makefile  service_machine.conf
MYOJ/OJ_server/template_html/: all_questions.html  one_question.html
MYOJ/OJ_server/wwwroot/: index.html  login.html  script.js  styles.css
MYOJ/comm/: Comm_model_MySQL.hpp  util.hpp
MYOJ/compile_server/: Runner.hpp  compile.hpp  compile_run.hpp  compile_server  compile_server.cc  makefile  run.hpp  testCR  testCRS  testCompileRunServer.cc
MYOJ/compile_server/comm/: Log.hpp  util.hpp
MYOJ/compile_server/temp/: 1727062835808-1.cpp  1727063330564-3.cpp  hello  hello.cpp  hello.stdout  test.cpp  test.stdout
MYOJ/compile_server/test/: test.cc  testCompile.cc  testCompileRun.cc  testRun.cc
MYOJ/data_server/: data_server  data_server.cc
MYOJ/data_server/wwwdata/: index.html  manage.html
